<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013 The Android Open Source Project
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<RelativeLayout
    style="@style/FragStyle"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_switch_to_sign_up"
        style="@style/BtnStyle.NoBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/btn_space"
        android:layout_marginTop="@dimen/btn_space"
        android:text="@string/sign_up"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/input_space"
        android:layout_marginRight="@dimen/input_space"
        android:orientation="vertical">

        <include layout="@layout/email_pass_group" />

        <LinearLayout
            android:id="@+id/center_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_cancel"
                style="@style/BtnStyle.WithBg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/btn_do_sign_in"
                style="@style/BtnStyle.WithBg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/btn_space"
                android:layout_weight="1"
                android:text="@string/sign_in"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_forgot_pass"
            style="@style/BtnStyle.NoBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/btn_space"
            android:text="@string/forgot_pass"/>
    </LinearLayout>

</RelativeLayout>